# champion

./: .gitignore  README.md  add_path.sh  build.sh  demo.sh  prereq.sh  run_patrol.sh  run_patrol_without_diplay.sh  temp
demo/map_create/: create.sh  gmapping.launch  map.pgm  prebuild.sh  run.sh  save.sh
demo/nav2d/: demo.sh  map.pgm  nav2d.html  nav2d.sh
demo/video/: README.md  prebuild.sh  run.sh  streamer.html
src/: cp-prereq.sh
src/cp/: CMakeLists.txt  package.xml
src/cp_bringup/: CMakeLists.txt  mainpage.dox  package.xml
src/cp_bringup/launch/: calibrate.launch  fake_pi_robot.launch  fake_turtlebot.launch  fake_turtlebot_with_head.launch  odom_ekf.launch  openni_driver.launch  turtlebot_carpet_create.launch  turtlebot_minimal_create.launch
src/cp_demo/: CMakeLists.txt  package.xml
src/cp_demo/launch/: demo.launch
src/cp_description/: CMakeLists.txt  mainpage.dox  package.xml
src/cp_description/launch/: test_pi_robot.launch  test_turtlebot_with_head.launch
src/cp_description/urdf/: arm.xacro  arm_hardware.xacro  head.xacro  head_hardware.xacro  pi_robot.urdf  pi_robot.xacro  pi_robot_arm.xacro  pi_robot_arm_hardware.xacro  pi_robot_head.xacro  pi_robot_head_hardware.xacro  turtlebot.urdf.xacro  turtlebot.xacro  turtlebot_body.urdf.xacro  turtlebot_hardware.urdf.xacro  turtlebot_hardware.xacro  turtlebot_kinect.urdf.xacro  turtlebot_with_head.xacro
src/cp_msgs/: CMakeLists.txt  mainpage.dox  package.xml
src/cp_msgs/src/rbx2_msgs/srv/: _SetBatteryLevel.py
src/cp_nav/: CMakeLists.txt  mainpage.dox  package.xml
src/cp_nav/launch/: mux_fake_move_base.launch  mux_fake_move_base_blank_map.launch  yocs_cmd_vel.launch  yocs_cmd_vel_with_keyboard.launch
src/cp_serial/: CMakeLists.txt  package.xml
src/cp_serial/launch/: cp_serial.launch
src/cp_serial/src/: serial.cpp
src/cp_tasks/: CMakeLists.txt  package.xml  setup.py
src/cp_tasks/launch/: fake_turtlebot.launch
src/cp_tasks/nodes/: clean_house_smach.py  clean_house_tree.py  image_converter.py  image_listener.py  monitor_fake_battery.py  patrol_script.py  patrol_smach.py  patrol_smach_callback.py  patrol_smach_concurrence.py  patrol_tree.py  pub_image.py  random_patrol_smach.py
src/cp_utils/: CMakeLists.txt  package.xml
src/cp_utils/cfg/: BatterySimulator.cfg  Pub3DTarget.cfg
src/cp_utils/docs/: BatterySimulatorConfig-usage.dox
src/cp_utils/launch/: battery_simulator.launch  pub_3d_target.launch  pub_tf_frame.launch
src/cp_utils/nodes/: battery_simulator.py  pub_3d_target.py
src/cp_utils/src/cp_utils/cfg/: BatterySimulatorConfig.py
src/cp_utils/src/cp_utils/srv/: _KillProcess.py  _LaunchProcess.py  _OldLaunchProcess.py
src/cp_vel/: CMakeLists.txt  package.xml
src/cp_vel/launch/: cp_vel.launch  pr2_2dnav.launch
src/cp_vel/src/: cp_vel_node.cpp
