<package>
  <name>cp_bringup</name>
  <version>0.4.0</version>

  <description>Champion Patrol URDF/Xacro Package</description>

  <maintainer email="hdszju@163.com">Dashun Han</maintainer>
  <license>BSD</license>
  <url type="website">http://champion-robot.com</url>
  <author email="hdszju@163.com">Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
