  <package>
  <name>cp_msgs</name>
  <version>0.1.0</version>

  <description>Champion Patrol URDF/Xacro Package</description>

  <maintainer email="hdszju@163.com">Dashun Han</maintainer>
  <license>BSD</license>
  <url type="website">http://champion-robot.com</url>
  <author email="hdszju@163.com">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
